--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,13 +1,86 @@
 <% layout("/layouts/boilerplate")%>
 
+<style>
+  .filter{
+    margin-top: 1rem;
+    text-align: center;
+    margin-right: 2rem;
+    opacity: 0.7;
+  }
+  .filter:hover{
+    opacity: 1;
+    cursor: pointer;
+  }
+  .filter p{
+    font-size: medium;
+  }
+  #filter{
+    display: flex;
+    flex-wrap: wrap;
+  }
 
 
+</style>
 
-<h1>All Listings</h1>
+<div id="filter">
+  <div class="filter">
+   <div> <i class="fa-solid fa-fire-flame-curved"></i></div>
+    <p>Trending</p>
+  </div>
+  <div class="filter">
+   <div> <i class="fa-solid fa-bed"></i></div>
+    <p>Rooms</p>
+  </div>
+  <div class="filter">
+   <div> <i class="fa-solid fa-city"></i></div>
+    <p>Iconic Cities</p>
+  </div>
+  <div class="filter">
+   <div> <i class="fa-solid fa-mountain-sun"></i></div>
+    <p>Mountains</p>
+  </div>
+  <div class="filter">
+   <div> <i class="fa-brands fa-fort-awesome"></i></div>
+    <p>Castle</p>
+  </div>
+  <div class="filter">
+   <div><i class="fa-solid fa-person-swimming"></i></div>
+    <p>Amazing Pools</p>
+  </div>
+  <div class="filter">
+   <div> <i class="fa-solid fa-cow"></i></div>
+    <p>Farms</p>
+  </div>
+  <div class="filter">
+   <div> <i class="fa-solid fa-umbrella-beach"></i></div>
+    <p>Beachfront</p>
+  </div>
+  <div class="filter">
+   <div><i class="fa-solid fa-mountain-city"></i></div>
+    <p>Amazing views</p>
+  </div>
+  <div class="filter">
+   <div><i class="fa-solid fa-water"></i></div>
+    <p>Lakefront</p>
+  </div>
+  <div class="filter">
+   <div> <i class="fa-solid fa-sailboat"></i></div>
+    <p>Boats</p>
+  </div>
+  <div class="filter">
+   <div> <i class="fa-solid fa-unlock-keyhole"></i></div>
+    <p>New</p>
+  </div>
+  <div class="filter">
+   <div><i class="fa-brands fa-dribbble"></i></div>
+    <p>Play</p>
+  </div>
+</div>
+<!-- <h1>All Listings</h1> -->
 <!-- <form method="GET" action="/listings/new">
             <button>Create New Listings</button>
         </form> -->
-<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
 
   <% for(let listing of allListings){ %>
   <a href="/listings/<%= listing._id %>" class="listing-link">
