--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -4,7 +4,7 @@
   .filter {
     margin-top: 1rem;
     text-align: center;
-    margin-right: 2rem;
+    margin-right: 1rem;
     opacity: 0.7;
   }
 
@@ -17,9 +17,24 @@
     font-size: medium;
   }
 
+  .tax-info {
+    display: none;
+  }
+
+  .tax-switch{
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 3rem;
+    padding: 1rem;
+    margin-left: 0.1rem;
+    display: flex;
+    align-items: center;
+  }
+
   #filter {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: flex-end;
+    align-items: center;
   }
 </style>
 
@@ -83,7 +98,7 @@
       <label class="form-check-label" for="flexSwitchCheckDefault">Display Taxes</label>
     </div>
   </div>
-
+  
 </div>
 <!-- <h1>All Listings</h1> -->
 <!-- <form method="GET" action="/listings/new">
@@ -102,6 +117,7 @@
             <%= listing.title %> <br>
           </b>
           &#8377 <%= listing.price.toLocaleString("en-IN") %>
+          <i class="tax-info"> &nbsp; &nbsp;+18% GST</i>
         </p>
 
       </div>
@@ -113,6 +129,14 @@
 <script>
   let taxSwitch = document.getElementById("flexSwitchCheckDefault");
   taxSwitch.addEventListener("click", () => {
-    console.log("clicked");
+    let taxInfo = document.getElementsByClassName("tax-info");
+    for (info of taxInfo) {
+      if (info.style.display != "inline") {
+        info.style.display = "inline";
+      } else {
+        info.style.display = "none";
+      }
+    }
+    // console.log(taxInfo);
   });
 </script>
