--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,3 +1,25 @@
+<style>
+  .btn-search {
+    background-color: rgb(245, 37, 37);
+    color: #fff;
+    border-radius: 25px;
+    padding: 0 1rem 0 1rem;
+  }
+  .btn-search:hover {
+    background-color: rgb(245, 37, 37);
+    color: #fff;
+  }
+  .btn-search i {
+    display: inline;
+    margin-right: 0.5rem;
+  }
+  .search-input {
+    border-radius: 25px;
+    padding: 0.5rem 3rem 0.5rem 3rem;
+    font-size: 0.9rem;
+  }
+</style>
+
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/listings"
@@ -16,12 +38,24 @@
         <a class="nav-link" href="/listings">Explore</a>
       </div>
       <div class="navbar-nav ms-auto">
+        <form class="d-flex" role="search">
+          <input
+            class="form-control me-2 search-input"
+            type="search"
+            placeholder="Search destination"
+          />
+          <button class="btn btn-search" type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>Search
+          </button>
+        </form>
+      </div>
+      <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/listings/new">Add Listing</a>
         <% if(!currUser){ %>
         <a class="nav-link" aria-current="page" href="/signup"><b>SignUp</b></a>
         <a class="nav-link" href="/login"><b>Log in</b></a>
         <% }%> <% if(currUser){ %>
-        <a class="nav-link" href="/logout"><b>Logout</b>  </a>
+        <a class="nav-link" href="/logout"><b>Logout</b> </a>
         <% }%>
       </div>
     </div>
