--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,17 +1,16 @@
 <footer>
-    <div class="f-info">
-        <div class="f-info-socials">
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-square-x-twitter"></i>
-            <i class="fa-brands fa-linkedin"></i>
-
-        </div>
-        <div class="f-info-brand">&copy; Wanderlust Private Limited</div>
-
-        <div class="f-info-links">
-            <a href="#">Privacy</a>
-            <a href="#">Terms</a>
-        </div>
+  <div class="f-info sticky-bottom mb-1">
+    <div class="f-info-socials">
+      <i class="fa-brands fa-square-facebook"></i>
+      <i class="fa-brands fa-square-instagram"></i>
+      <i class="fa-brands fa-square-x-twitter"></i>
+      <i class="fa-brands fa-linkedin"></i>
     </div>
+    <div class="f-info-brand">&copy; Wanderlust Private Limited</div>
+
+    <div class="f-info-links">
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+    </div>
+  </div>
 </footer>
